--- a/mmc-app/package.json
+++ b/mmc-app/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "fontsource-sofia": "^4.0.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
